--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -22,7 +22,9 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm install -g yarn
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test 
     - name: yarn install, build and test
       run: |
         yarn install
